# pc-optimizer

./: .gitattributes  .gitignore  BUILD_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GameBooster.spec  LICENSE  README.md  SECURITY.md  build.bat  main.py  pyproject.toml  requirements.txt
gui/: app.py  app_paths.py  sparkline.py
modules/: hardware_detector.py  hw_optimizer.py  igpu_monitor.py  monitor.py  profile_manager.py  ram_cleaner.py  registry_optimizer.py  registry_tweaks.py  windows_optimizer.py
profiles/: __init__.py
utils/: state_manager.py
