[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamebooster"
version = "2.1.0"
description = "Universal Windows Game Optimizer - Automatically detects hardware and optimizes Windows for gaming"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "GameBooster Contributors"}
]
keywords = ["gaming", "windows", "optimizer", "performance", "boost", "hardware"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Gamers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: System :: Operating System",
    "Topic :: Utilities",
]
dependencies = [
    "customtkinter>=5.2.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
gamebooster = "main:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/GameBooster"
Repository = "https://github.com/YOUR_USERNAME/GameBooster.git"
Issues = "https://github.com/YOUR_USERNAME/GameBooster/issues"

[tool.setuptools.packages.find]
include = ["modules*", "gui*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
